# Quick-QGIS

./: .gitignore  README.md  install.bat  main.py  main.spec  pyproject.toml  requirements.txt  test_imports.py  test_map_only.py
.qtcreator/Python_3_12_3venv/: pyvenv.cfg
.qtcreator/Python_3_12_3venv/Scripts/: activate  activate.bat
.qtcreator/qgis_pyvenv/: pyvenv.cfg
.qtcreator/qgis_pyvenv/Scripts/: activate  activate.bat
docs/: README.md
src/: __init__.py  app.py  bridge.py  config.py  constants.py  layer_manager.py  ui_manager.py
src/core/: __init__.py  data_manager.py  map_engine.py
src/services/: __init__.py  basemap_service.py
src/utils/: __init__.py  logger.py
ui/: __init__.py  main.qml  tools.qml
